--- a/src/components/uploaddocuments.module.scss
+++ b/src/components/uploaddocuments.module.scss
@@ -1,3 +1,10 @@
 input {
     display: none;
 }
+
+.uploadField {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0 50px;
+}
