--- a/src/pages/newcustomerform.module.scss
+++ b/src/pages/newcustomerform.module.scss
@@ -1,7 +1,7 @@
 .formContainer {
-    display: flex;
-    flex-direction: column;
-    margin-top: 200px;
-    border: 1px solid red;
-    padding: 50px;
+  margin-top: 100px;
+}
+
+.navButton {
+  justify-content: center;
 }
